[tool.poetry]
name = "clueless"
version = "0.1.0"
description = "A multiplayer version of the popular boardgame, Cluedo."
authors = ["Amanda Ho", "Catherine Hanafin", "Christopher Soto", "Hannah Holbert", "Phillip Phan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.6.2"
pytz = "^2024.1"
datetime = "^5.5"
mongomock = "^4.1.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
